--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux
 #CMD ["ping","-c5","google.com"]
 #ENTRYPOINT ["ping","-c5"]
-CMD [google.com]
+CMD ["google.com"]
 ENTRYPOINT ["ping","-c5"]
